objects/EUR_CRM_Payment_Term_to_MT_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mechanic_Type__c</fullName>
        <label>Mechanic Type (EU)</label>
        <referenceTo>EUR_CRM_Mechanic_Type__c</referenceTo>
        <relationshipName>Payment_Term_to_Mechanic_Type_Mappings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Payment_Term_Name__c</fullName>
        <formula>EUR_CRM_Payment_Term__r.EUR_CRM_Payment_Term_Picklist_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Term Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Payment_Term__c</fullName>
        <label>Payment Term</label>
        <referenceTo>EUR_CRM_Payment_Term__c</referenceTo>
        <relationshipName>Payment_Term_to_Mechanic_Type_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Payment Term to Mechanic Mapping (EU)</label>
    <nameField>
        <displayFormat>PTMTM-{0000000000}</displayFormat>
        <label>Payment Term to Mechanic Type Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Term to Mechanic Mappings (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_CRM_Payment_Term_To_Mechanic_Type_Mapping</fullName>
        <active>true</active>
        <label>Payment Term To Mechanic Type Mapping</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Payment_Term_To_Mechanic_Type_Mapping</fullName>
        <active>true</active>
        <label>EUR DE Payment Term To Mechanic Type Mapping</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>